# StudentWhisperer

./: .gitignore  .pylintrc  Chatbot.py  Dockerfile  README.md  app.py  chatbot.py  justfile  pyproject.toml  requirements.txt  utils.py
.github/workflows/: azure-openai-integration.yml  azure-static-web-apps-polite-beach-0a1c52003.yml  azure_openai_integration.yml  deploy_flask_app.yml  deploy_react_app.yml  main.yml  static_analysis.yml  studentwhisperercontainer-AutoDeployTrigger-93dea66f-24a6-4380-9613-70dfd6a898c5.yml
.streamlit/: config.toml  secrets.toml  secrets.toml.sample
ai_search/: search_client.py
backend/: Dockerfile  app.py  pyproject.toml
backend/static/: register.js  script.js  script2.js  styles.css
backend/templates/: chatbot.html  index.html  index2.html  login.html  profile.html  register.html
clients/: database_client.py  openai_client.py  search_client.py
clients/utils/: __init__.py
pages/: 1_profile.py  chatbot.py  login.py  profile.py
pages/utils/: __init__.py
